@@ -1,3 +1,11 @@
+Sun Oct 14 00:49:31 BST 2007  Colin Watson  <cjwatson@debian.org>
+
+	* man/Rules.man (clean-local): Remove; we don't need to worry about
+	  removing empty directories in separated build trees.
+	* man/Makefile.in, man/de.UTF-8/Makefile.in,
+	  man/es.UTF-8/Makefile.in, man/fr.UTF-8/Makefile.in,
+	  man/it.UTF-8/Makefile.in, man/ja.UTF-8/Makefile.in: Regenerate.
+
 Sun Oct 14 00:40:26 BST 2007  Colin Watson  <cjwatson@debian.org>
 
 	* man-db.lsm: Move to ...
